--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/Index.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/Index.cshtml
@@ -9,17 +9,18 @@
     <head>
         <meta name="viewport" content="width=device-width" />
         <title>Index</title>
+        <p><br></p>
     </head>
 
     <body>
         <div id="saleList">
             <table cellspacing="2" border="1" cellpadding="5" width="600">
                 <tr>
-                    <td>Date  </td>
-                    <td>Manager  </td>
-                    <td>Client  </td>
-                    <td>Product  </td>
-                    <td>Price  </td>
+                    <td><b>Date</b></td>
+                    <td><b>Manager</b></td>
+                    <td><b>Client</b></td>
+                    <td><b>Product</b></td>
+                    <td><b>Price</b></td>
                 </tr>
 
                 @foreach (var sale in ViewBag.Sales)
