--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/Index.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/Index.cshtml
@@ -7,15 +7,16 @@
     <html>
 
     <head>
-        <meta name="viewport" content="width=device-width" />
+        <meta name="viewport" content="width=device-width" />       <!--view = desktop with-->
         <title>Index</title>
-        <p><br></p>
+        <p><br></p>                                                 <!--add line after head-->
     </head>
 
     <body>
         <div id="saleList">
             <table cellspacing="2" border="1" cellpadding="5" width="600">
                 <tr>
+                    <td><b>ID</b></td>
                     <td><b>Date</b></td>
                     <td><b>Manager</b></td>
                     <td><b>Client</b></td>
@@ -26,6 +27,7 @@
                 @foreach (var sale in ViewBag.Sales)
                 {
                     <tr>
+                        <td> @sale.Id </td>
                         <td> @sale.Date </td>
                         <td> @sale.Manager </td>
                         <td> @sale.Client </td>
