--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/Index.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/Index.cshtml
@@ -13,29 +13,11 @@
     </head>
 
     <body>
-        <div id="saleList">
-            <table cellspacing="2" border="1" cellpadding="5" width="600">
-                <tr>
-                    <td><b>ID</b></td>
-                    <td><b>Date</b></td>
-                    <td><b>Manager</b></td>
-                    <td><b>Client</b></td>
-                    <td><b>Product</b></td>
-                    <td><b>Price</b></td>
-                </tr>
+        <div>
+            @Html.ActionLink("View All Sales", "Sales")
 
-                @foreach (var sale in ViewBag.Sales)
-                {
-                    <tr>
-                        <td> @sale.Id </td>
-                        <td> @sale.Date </td>
-                        <td> @sale.Manager </td>
-                        <td> @sale.Client </td>
-                        <td> @sale.Product </td>
-                        <td> @sale.PriceSum </td>
-                    </tr>
-                }
-            </table>
+
+
         </div>
     </body>
 </html>
