add manager model and view

--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/Sales.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/Sales.cshtml
@@ -15,7 +15,7 @@
 <body>
     <h2>Sales information:</h2>
 
-    <div id="saleList">
+    <div id="salesList">
         <table cellspacing="2" border="1" cellpadding="5" width="600">
             <tr>
                 <td><b>ID</b></td>
