add DropDownList for sales (manager client product date)

--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/Managers.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/Managers.cshtml
@@ -25,11 +25,11 @@
     </div>
 </section>
 
-<br/>
-<div>
-    @Html.ActionLink("Back to full list", "Managers")
-</div>
 
+<p></p>
+<form action="Managers">
+    <button type="submit">Show all managers</button>
+</form>
 
 <p></p>
 <form action="Index">
