--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/Index.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/Index.cshtml
@@ -7,24 +7,7 @@
 <h4> @Html.ActionLink("View All Managers", "Managers")  </h4>
 
 
-<style type="text/css">
-    #content {
-        width: 500px; /* Ширина слоя */
-        margin: 0 auto 50px; /* Выравнивание по центру */
-    }
-
-    #footer {
-        position: fixed; /* Фиксированное положение */
-        left: 0;
-        bottom: 0; /* Левый нижний угол */
-        padding: 10px; /* Поля вокруг текста */
-        background: #fff; /* Цвет фона */
-        color: #39b54a; /* Цвет текста */
-        width: 100%; /* Ширина слоя */
-    }
-</style>
-
-<div id="footer">
+<div>
     <h4>Help sites: </h4>
     <p><a href="http://htmlbook.ru" class="btn btn-default btn-sm">Html &raquo;</a></p>
     <p><a href="https://professorweb.ru/my/ASP_NET/mvc/level2/2_1.php" class="btn btn-default btn-sm">Razor &raquo;</a></p>
