--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Shared/_Layout.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        HEADER
+        <h3> Sales statistics display system </h3>
     </header>
 
     <div class="body">
