--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/ManagerEdit.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/ManagerEdit.cshtml
@@ -37,6 +37,7 @@
             $.post('@Url.Action("ManagerEdit", "Home")', $("form").serialize(), function (data, textStatus, jHXR) {
                 hideManagerEdit();
                 onManagerListLoad();
+                //!!!!!!!!!after operation don't work button "back to homepage"
             });
         });
     }
