--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/Index.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/Index.cshtml
@@ -3,14 +3,5 @@
 }
 
 
-<h4> @Html.ActionLink("View All Sales", "Sales")  </h4>
-<h4> @Html.ActionLink("View All Managers", "Managers")  </h4>
-
-
-<div>
-    <h4>Help sites: </h4>
-    <p><a href="http://htmlbook.ru" class="btn btn-default btn-sm">Html &raquo;</a></p>
-    <p><a href="https://professorweb.ru/my/ASP_NET/mvc/level2/2_1.php" class="btn btn-default btn-sm">Razor &raquo;</a></p>
-    <p><a href="https://metanit.com/sharp/mvc/7.3.php" class="btn btn-default btn-sm">Validation attribut &raquo;</a></p>
-    <p><a href="https://www.w3schools.com/bootstrap/default.asp" class="btn btn-default btn-sm">Bootstrap &raquo;</a></p>
-</div>
+<!--<h4> @@Html.ActionLink("View All Sales", "Sales")  </h4>-->
+<!--<h4> @@Html.ActionLink("View All Managers", "Managers")  </h4>-->
