--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/ManagerEdit.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/ManagerEdit.cshtml
@@ -43,7 +43,10 @@
     }
 
     onManagerCancel = function () {
-        $("form").on("reset", function () { hideManagerEdit(); onManagerListLoad(); });
+        $("form").on("reset", function () {
+            hideManagerEdit();
+            onManagerListLoad();
+        });
     }
 
     $("#saveButton").click(onManagerSave);
