--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/Index.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/Index.cshtml
@@ -3,5 +3,5 @@
 }
 
 
-<!--<h4> @@Html.ActionLink("View All Sales", "Sales")  </h4>-->
-<!--<h4> @@Html.ActionLink("View All Managers", "Managers")  </h4>-->
+<h4> @Html.ActionLink("View All Sales", "Sales")  </h4>
+<h4> @Html.ActionLink("View All Managers", "Managers")  </h4>
