--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Account/_RemoveExternalLoginsPartial.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Account/_RemoveExternalLoginsPartial.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model ICollection<SaleStatistics.Models.ExternalLogin>
+﻿@model ICollection<SaleStatistics.Models.ExternalLogin>
 
 @if (Model.Count > 0)
 {
