--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Shared/_LoginPartial.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Shared/_LoginPartial.cshtml
@@ -8,10 +8,11 @@
             <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
         }
 
-        @if (User.IsInRole("admin"))
-        {
-            @Html.ActionLink("Register new User", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })
-        }
+        @*     @if (User.IsInRole("admin"))
+            {
+                @Html.ActionLink("Register new User", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })
+            }
+        *@
 
 
     </text>
