--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Shared/_Layout.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("Sales", "Sales")</li>
                         <li>@Html.ActionLink("Managers", "Managers")</li>
+                        <li>@Html.ActionLink("Managers --- chart", "ManagersChart")</li>
                     </ul>
                 </nav>
             </div>
