--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Shared/_Layout.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("Sales", "Sales")</li>
                         <li>@Html.ActionLink("Managers", "Managers")</li>
-                        <li>@Html.ActionLink("Managers --- chart", "ManagersChart")</li>
+                        <li>@Html.ActionLink("Managers chart", "ManagersChart")</li>
                     </ul>
                 </nav>
             </div>
@@ -45,7 +45,7 @@
 
     <footer>
         <ul id="menu">
-            <p> @DateTime.Now.Year - My Application</p>
+             @DateTime.Now.Year - My Application
         </ul>
     </footer>
 
