--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/ManagersChart.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/ManagersChart.cshtml
@@ -1,58 +1,46 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Managers sales chart";
 }
 
-<h3>Managers sales chart</h3>
+<h2>Managers sales chart</h2>
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script type="text/javascript">
+    $(document).ready(
+        function () {
+            // Load the Visualization API and the corechart package.
+            google.charts.load('current', { 'packages': ['corechart'] });
 
-<html>
-<head>
-    <!--Load the AJAX API-->
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
+            // Set a callback to run when the Google Visualization API is loaded.
+            google.charts.setOnLoadCallback(drawChart);
 
-      // Load the Visualization API and the corechart package.
-      google.charts.load('current', {'packages':['corechart']});
+            // Callback that creates and populates a data table,
+            // instantiates the pie chart, passes in the data and
+            // draws it.
+            function drawChart() {
 
-      // Set a callback to run when the Google Visualization API is loaded.
-      google.charts.setOnLoadCallback(drawChart);
+                // Create the data table.
+                var data = new google.visualization.DataTable();
+                data.addColumn('string', 'Topping');
+                data.addColumn('number', 'Slices');
 
-      // Callback that creates and populates a data table,
-      // instantiates the pie chart, passes in the data and
-      // draws it.
-      function drawChart() {
+                $.get('@Url.Action("GetManagersChartData", "Home")', null,
+                    function (dataJSON, textStatus, jqXHR) {
+                        data.addRows(dataJSON);
 
-        // Create the data table.
-        var data = new google.visualization.DataTable();
-        data.addColumn('string', 'Topping');
-        data.addColumn('number', 'Slices');
+                        // Set chart options
+                        var options = {
+                            'title': 'Managers sales chart',
+                            'width': 500,
+                            'height': 400,
+                        };
 
-
-       //data.addRows([
-       //   ['Mushrooms', 3],
-       //   ['Onions', 1],
-       //   ['Olives', 1],
-       //   ['Zucchini', 1],
-       //   ['Pepperoni', 2]
-       // ]);
-
-
-
-
-        // Set chart options
-        var options = {'title':'How Much Pizza I Ate Last Night',
-                       'width':400,
-                       'height':300};
-
-        // Instantiate and draw our chart, passing in some options.
-        var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
-        chart.draw(data, options);
-      }
-    </script>
-</head>
-
-<body>
-    <!--Div that will hold the pie chart-->
-    <div id="chart_div"></div>
-</body>
-</html>
+                        // Instantiate and draw our chart, passing in some options.
+                        var chart = new google.visualization.PieChart(document.getElementById('managersChart'));
+                        chart.draw(data, options);
+                    });
+            }
+        }
+        );
+</script>
+<div id="managersChart">
+</div>
