--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Shared/_Layout.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Shared/_Layout.cshtml
@@ -44,9 +44,7 @@
     </div>
 
     <footer>
-        <ul id="menu">
-             @DateTime.Now.Year - My Application
-        </ul>
+        <p>&copy;  @DateTime.Now.Year - My Application</p>
     </footer>
 
     @*
