--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/ManagersChart.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/ManagersChart.cshtml
@@ -1,46 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Managers sales chart";
+    ViewBag.Title = "ZZZZZ";
+
 }
 
-<h2>Managers sales chart</h2>
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script type="text/javascript">
-    $(document).ready(
-        function () {
-            // Load the Visualization API and the corechart package.
-            google.charts.load('current', { 'packages': ['corechart'] });
 
-            // Set a callback to run when the Google Visualization API is loaded.
-            google.charts.setOnLoadCallback(drawChart);
 
-            // Callback that creates and populates a data table,
-            // instantiates the pie chart, passes in the data and
-            // draws it.
-            function drawChart() {
 
-                // Create the data table.
-                var data = new google.visualization.DataTable();
-                data.addColumn('string', 'Topping');
-                data.addColumn('number', 'Slices');
-
-                $.get('@Url.Action("GetManagersChartData", "Home")', null,
-                    function (dataJSON, textStatus, jqXHR) {
-                        data.addRows(dataJSON);
-
-                        // Set chart options
-                        var options = {
-                            'title': 'Managers sales chart',
-                            'width': 500,
-                            'height': 400,
-                        };
-
-                        // Instantiate and draw our chart, passing in some options.
-                        var chart = new google.visualization.PieChart(document.getElementById('managersChart'));
-                        chart.draw(data, options);
-                    });
-            }
-        }
-        );
-</script>
-<div id="managersChart">
-</div>
