--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/ManagersChart.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/ManagersChart.cshtml
@@ -1,105 +1,91 @@
-﻿@model IEnumerable<SaleStatistics.Models.Manager>
+﻿
+<html>
+<head>
+    <!--Load the AJAX API-->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
 
-CHART
+      // Load the Visualization API and the corechart package.
+      google.charts.load('current', {'packages':['corechart']});
 
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+      // Set a callback to run when the Google Visualization API is loaded.
+      google.charts.setOnLoadCallback(drawChart);
 
-<script type="text/javascript">
-    $(document).ready(
-        function () {
-            // Load the Visualization API and the corechart package.
-            google.charts.load('current', { 'packages': ['corechart'] });
+      // Callback that creates and populates a data table,
+      // instantiates the pie chart, passes in the data and
+      // draws it.
+      function drawChart() {
 
-            // Set a callback to run when the Google Visualization API is loaded.
-            google.charts.setOnLoadCallback(drawChart);
+        // Create the data table.
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'Topping');
+        data.addColumn('number', 'Slices');
 
-            // Callback that creates and populates a data table,
-            // instantiates the pie chart, passes in the data and
-            // draws it.
-            function drawChart() {
+        data.addRows([
+          ['Mushrooms', 3],
+          ['Onions', 1],
+          ['Lime', 12]
+        ]);
 
-                // Create the data table.
-                var data = new google.visualization.DataTable();
-                data.addColumn('string', 'Topping');
-                data.addColumn('number', 'Slices');
+        // Set chart options
+        var options = {'title':'How Much Pizza I Ate Last Night',
+                       'width':400,
+                       'height':300};
 
-                $.get('@Url.Action("GetManagersChartData", "Home")', null,
-                    function (dataJSON, textStatus, jqXHR) {
-                        //var parsed = JSON.parse(dataJSON);
-                        data.addRows(dataJSON);
-                        // Set chart options
-                        var options = {
-                            'title': 'ZZZZZZZZ',
-                            'width': 400,
-                            'height': 300
-                        };
+        // Instantiate and draw our chart, passing in some options.
+        var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+        chart.draw(data, options);
+      }
+    </script>
+</head>
 
-                        // Instantiate and draw our chart, passing in some options.
-                        var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
-                        chart.draw(data, options);
-                    });
-
-                //data.addRows([
-                //  ['Mushrooms', 3],
-                //  ['Onions', 1],
-                //  ['Olives', 1],
-                //  ['Zucchini', 1],
-                //  ['Pepperoni', 2]
-                //]);
-
-
-            }
-        }
-        );
-</script>
-
-
-
+<body>
+    <!--Div that will hold the pie chart-->
+    <div id="chart_div"></div>
+</body>
+</html>
 
 
 @*<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script type="text/javascript">
-    $(document).ready(
-        function () {
-            // Load the Visualization API and the corechart package.
-            google.charts.load('current', { 'packages': ['corechart'] });
+    <script type="text/javascript">
+        $(document).ready(
+            function () {
+                // Load the Visualization API and the corechart package.
+                google.charts.load('current', { 'packages': ['corechart'] });
 
-            // Set a callback to run when the Google Visualization API is loaded.
-            google.charts.setOnLoadCallback(drawChart);
+                // Set a callback to run when the Google Visualization API is loaded.
+                google.charts.setOnLoadCallback(drawChart);
 
-            // Callback that creates and populates a data table,
-            // instantiates the pie chart, passes in the data and
-            // draws it.
-            function drawChart() {
+                // Callback that creates and populates a data table,
+                // instantiates the pie chart, passes in the data and
+                // draws it.
+                function drawChart() {
 
-                // Create the data table.
-                var data = new google.visualization.DataTable();
-                data.addColumn('string', 'Topping');
-                data.addColumn('number', 'Slices');
+                    // Create the data table.
+                    var data = new google.visualization.DataTable();
+                    data.addColumn('string', 'Topping');
+                    data.addColumn('number', 'Slices');
 
-                $.get('@Url.Action("GetManagersChartData", "Home")', null,
-                    function (dataJSON, textStatus, jqXHR) {
-                        data.addRows(dataJSON);
+                    $.get('@Url.Action("GetManagersChartData", "Home")', null,
+                        function (dataJSON, textStatus, jqXHR) {
+                            data.addRows(dataJSON);
 
-                        //var bc = $('body').css("backgroud-color");
-                        //alert(bc);
+                            // Set chart options
+                            var options = {
+                                'title': 'Managers sales chart',
+                                'width': 500,
+                                'height': 400,
+                                is3D: true,
+                                backgroundColor: '#efeeef'
+                            };
 
-                        // Set chart options
-                        var options = {
-                            'title': 'Managers sales chart',
-                            'width': 500,
-                            'height': 400,
-                            is3D: true,
-                            backgroundColor: '#efeeef'
-                        };
-
-                        // Instantiate and draw our chart, passing in some options.
-                        var chart = new google.visualization.PieChart(document.getElementById('managersChart'));
-                        chart.draw(data, options);
-                    });
+                            // Instantiate and draw our chart, passing in some options.
+                            var chart = new google.visualization.PieChart(document.getElementById('managersChart'));
+                            chart.draw(data, options);
+                        });
+                }
             }
-        }
-        );
-</script>
-<div id="managersChart">
-</div>*@
+            );
+    </script>
+    <div id="managersChart">
+    </div>*@
