--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Shared/_Layout.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Shared/_Layout.cshtml
@@ -30,6 +30,8 @@
                         <li>@Html.ActionLink("Sales", "Sales")</li>
                         <li>@Html.ActionLink("Managers", "Managers")</li>
                         <li>@Html.ActionLink("Managers chart", "ManagersChart")</li>
+
+                        <li>@Html.ActionLink("TEST view chart", "ViewChart")</li>
                     </ul>
                 </nav>
             </div>
