--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/ViewChart.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/ViewChart.cshtml
@@ -1,73 +1,53 @@
-﻿
-@{
+﻿@{
+    ViewBag.Title = "TEST";
     Layout = null;
 }
 
-<h2>ZZZZZZZZZZZZZZZZZZZZZ</h2>
-
-<div id="placeholder"></div>
-<script type="text/javascript">
-    
-  var  data={
-        "firstName":"Ray",
-        "lastName":"Villalobos",
-        "joined":2012
-    };
-    document.getElementById("placeholder").innerHTML=data.firstName+" "+data.lastName+" "+da
-</script>
+<h2>Chart</h2>
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript">
+    $(document).ready(
+        function () {
+            // Load the Visualization API and the corechart package.
+            google.charts.load('current', { 'packages': ['corechart'] });
 
-   
+            // Set a callback to run when the Google Visualization API is loaded.
+            google.charts.setOnLoadCallback(drawChart);
 
-        // Load the Visualization API and the corechart package.
-        google.charts.load('current', { 'packages': ['corechart'] });
+            // Callback that creates and populates a data table,
+            // instantiates the pie chart, passes in the data and
+            // draws it.
+            function drawChart() {
 
-        // Set a callback to run when the Google Visualization API is loaded.
-        google.charts.setOnLoadCallback(drawChart);
+                // Create the data table.
+                var data = new google.visualization.DataTable();
+                data.addColumn('string', 'Topping');
+                data.addColumn('number', 'Slices');
 
-        // Callback that creates and populates a data table,
-        // instantiates the pie chart, passes in the data and
-        // draws it.
-        function drawChart() {
+                $.get('@Url.Action("GetManagersChartData", "Home")', null,
+                    function (dataJSON, textStatus, jqXHR) {
+                        data.addRows(dataJSON);
 
-            // Create the data table.
-            var data = new google.visualization.DataTable();
-            data.addColumn('string', 'Topping');
-            data.addColumn('number', 'Slices');
+                        //chart options
+                        var options = {
+                            'title': 'Managers sales chart',
+                            'width': 500,
+                            'height': 400,
+                        };
 
-            $.get('@Url.Action("GetManagersChartData", "HomeController")', null,
-                        function (dataJSON, textStatus, jqXHR) {
-                            data.addRows([dataJSON]);
-
-                      
-            //data.addRows([
-            //    ['Mushrooms', 3],
-            //    ['Onions', 1],
-            //    ['Lime', 12]
-            //]);
-
-                            // Set chart options
-                            var options = {
-                                'title': 'Managers sales chart',
-                                'width': 500,
-                                'height': 400};
-
-                            // Instantiate and draw our chart, passing in some options.
-                            var chart = new google.visualization.PieChart(document.getElementById('managersChart'));
-                            chart.draw(data, options);
-                        }
-            )
-       
-    }
- 
-
+                        // Instantiate and draw our chart, passing in some options.
+                        var chart = new google.visualization.PieChart(document.getElementById('managersChart'));
+                        chart.draw(data, options);
+                    });
+            }
+        }
+        );
 </script>
-<div id="managersChart">
-</div>
+@*<div id="managersChart">
+    </div>*@
 
 
-<form action= "Index">
+<form action="Index">
     <button type="submit">go home</button>
 </form>
