--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/ViewChart.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/ViewChart.cshtml
@@ -5,7 +5,9 @@
 
 <h2>Chart</h2>
 
+<script src="~/Scripts/jquery-2.2.3.min.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
 <script type="text/javascript">
     $(document).ready(
         function () {
@@ -22,8 +24,8 @@
 
                 // Create the data table.
                 var data = new google.visualization.DataTable();
-                data.addColumn('string', 'Topping');
-                data.addColumn('number', 'Slices');
+                data.addColumn('string', 'ManagerName');
+                data.addColumn('number', 'PriceSum');
 
                 $.get('@Url.Action("GetManagersChartData", "Home")', null,
                     function (dataJSON, textStatus, jqXHR) {
@@ -44,8 +46,8 @@
         }
         );
 </script>
-@*<div id="managersChart">
-    </div>*@
+<div id="managersChart">
+    </div>
 
 
 <form action="Index">
