--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/ManagersChart.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/ManagersChart.cshtml
@@ -1,91 +1,50 @@
-﻿
-<html>
-<head>
-    <!--Load the AJAX API-->
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
+﻿@{
+    ViewBag.Title = "Managers Chart";
+}
 
-      // Load the Visualization API and the corechart package.
-      google.charts.load('current', {'packages':['corechart']});
+<h4>Chart:</h4>
 
-      // Set a callback to run when the Google Visualization API is loaded.
-      google.charts.setOnLoadCallback(drawChart);
+<script src="~/Scripts/jquery-2.2.3.min.js"></script>
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
-      // Callback that creates and populates a data table,
-      // instantiates the pie chart, passes in the data and
-      // draws it.
-      function drawChart() {
+<script type="text/javascript">
+    $(document).ready(
+        function () {
+            // Load the Visualization API and the corechart package.
+            google.charts.load('current', { 'packages': ['corechart'] });
 
-        // Create the data table.
-        var data = new google.visualization.DataTable();
-        data.addColumn('string', 'Topping');
-        data.addColumn('number', 'Slices');
+            // Set a callback to run when the Google Visualization API is loaded.
+            google.charts.setOnLoadCallback(drawChart);
 
-        data.addRows([
-          ['Mushrooms', 3],
-          ['Onions', 1],
-          ['Lime', 12]
-        ]);
+            // Callback that creates and populates a data table,
+            // instantiates the pie chart, passes in the data and
+            // draws it.
+            function drawChart() {
 
-        // Set chart options
-        var options = {'title':'How Much Pizza I Ate Last Night',
-                       'width':400,
-                       'height':300};
+                // Create the data table.
+                var data = new google.visualization.DataTable();
+                data.addColumn('string', 'ManagerName');
+                data.addColumn('number', 'PriceSum');
 
-        // Instantiate and draw our chart, passing in some options.
-        var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
-        chart.draw(data, options);
-      }
-    </script>
-</head>
+                $.get('@Url.Action("GetManagersChartData", "Home")', null,
+                    function (dataJSON, textStatus, jqXHR) {
+                        data.addRows(dataJSON);
 
-<body>
-    <!--Div that will hold the pie chart-->
-    <div id="chart_div"></div>
-</body>
-</html>
+                        //chart options
+                        var options = {
+                            'title': 'Managers sales chart',
+                            'width': 500,
+                            'height': 400,
+                            is3D: true,
+                        };
 
-
-@*<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
-        $(document).ready(
-            function () {
-                // Load the Visualization API and the corechart package.
-                google.charts.load('current', { 'packages': ['corechart'] });
-
-                // Set a callback to run when the Google Visualization API is loaded.
-                google.charts.setOnLoadCallback(drawChart);
-
-                // Callback that creates and populates a data table,
-                // instantiates the pie chart, passes in the data and
-                // draws it.
-                function drawChart() {
-
-                    // Create the data table.
-                    var data = new google.visualization.DataTable();
-                    data.addColumn('string', 'Topping');
-                    data.addColumn('number', 'Slices');
-
-                    $.get('@Url.Action("GetManagersChartData", "Home")', null,
-                        function (dataJSON, textStatus, jqXHR) {
-                            data.addRows(dataJSON);
-
-                            // Set chart options
-                            var options = {
-                                'title': 'Managers sales chart',
-                                'width': 500,
-                                'height': 400,
-                                is3D: true,
-                                backgroundColor: '#efeeef'
-                            };
-
-                            // Instantiate and draw our chart, passing in some options.
-                            var chart = new google.visualization.PieChart(document.getElementById('managersChart'));
-                            chart.draw(data, options);
-                        });
-                }
+                        // Instantiate and draw our chart, passing in some options.
+                        var chart = new google.visualization.PieChart(document.getElementById('managersChart'));
+                        chart.draw(data, options);
+                    });
             }
-            );
-    </script>
-    <div id="managersChart">
-    </div>*@
+        }
+        );
+</script>
+<div id="managersChart">
+</div>
