--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Shared/_LoginPartial.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Shared/_LoginPartial.cshtml
@@ -2,24 +2,24 @@
 {
     <text>
         Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!
+        <br>To change password press your name.
+
+        @if (User.IsInRole("admin"))
+        {
+            <br> @Html.ActionLink("Register new account", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })
+        }
+
         @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
         {
             @Html.AntiForgeryToken()
             <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
         }
 
-        @*     @if (User.IsInRole("admin"))
-            {
-                @Html.ActionLink("Register new User", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })
-            }
-        *@
-
     </text>
 }
 else
 {
     <ul>
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
         <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
