--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/ManagersChart.cshtml
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Views/Home/ManagersChart.cshtml
@@ -36,6 +36,7 @@
                             'width': 500,
                             'height': 400,
                             is3D: true,
+                            backgroundColor: '#efeeef'
                         };
 
                         // Instantiate and draw our chart, passing in some options.
